[project]
name = "nats-demo"
version = "0.0.1"
dependencies = [
    "fastapi",
    "loguru",
    "nats-py",
    "requests",
    "uvicorn"
]

[project.scripts]
parse = "nats_demo.parse:main"


[tool.pytest.ini_options]
pythonpath = [ "src" ]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
