[project]
name = "nats-demo"
version = "0.0.1"
dependencies = [
    "fastapi",
    "loguru",
    "nats-py",
    "requests",
    "uvicorn"
]

[project.scripts]
pr-ingest = "nats_demo.primary_reserves.ingest:main"
pr-parse = "nats_demo.primary_reserves.parse:main"
pr-reply = "nats_demo.primary_reserves.reply:main"
pr-api = "nats_demo.primary_reserves.api:main"


[tool.pytest.ini_options]
pythonpath = [ "src" ]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
